--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,133 @@
 @import url("https://fonts.googleapis.com/css2?family=Archivo+Black&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=PT+Serif&family=Poppins:wght@100;200;300;400;500;600;700;800&family=Roboto:ital,wght@0,100;0,400;1,300;1,400;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Archivo+Black&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=PT+Serif&family=Poppins:wght@100;200;300;400;500;600;700;800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 /* Import End */
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+:root {
+  --primary-color: #131316;
+  --secondary-color: #f1faee;
+  --highlight: #00dfa2;
+}
+
+.dark {
+  background-color: var(--primary-color);
+  color: var(--secondary-color);
+}
+.light {
+  color: var(--primary-color);
+  background-color: var(--secondary-color);
+}
+.iconDark {
+  color: var(--primary-color);
+  background-color: var(--secondary-color);
+  border-radius: 50%;
+  width: 1.8rem;
+  height: 1.8rem;
+  padding: 0.4rem;
+}
+.iconLight {
+  background-color: var(--primary-color);
+  color: var(--secondary-color);
+  border-radius: 50%;
+  width: 1.8rem;
+  height: 1.8rem;
+  padding: 0.4rem;
+}
+
+.navlink-active .iconDark,
+.navlink-active .iconLight {
+  background-color: var(--highlight);
+}
+.navlink-active .navText {
+  color: var(--highlight);
+}
+
+.navLinks > span {
+  display: none;
+}
+.navLinks:hover > span {
+  display: block;
+}
+
+.scrollWindow {
+  flex-direction: column;
+  position: fixed;
+  right: 2vh;
+  top: 10vh;
+  cursor: pointer;
+}
+
+.scrollWindow ul {
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.fade-out {
+  animation: fadeout linear;
+  animation-timeline: view();
+  animation-range: exit -200px;
+}
+@keyframes fadeout {
+  to {
+    opacity: 0;
+    scale: 1.2;
+  }
+}
+.loading {
+  scale: 0 1;
+  animation: loading 0.3s linear;
+  animation-timeline: scroll();
+}
+@keyframes loading {
+  to {
+    scale: 1;
+  }
+}
+@media (max-width: 767px) {
+  .iconDark {
+    color: #131316;
+    background-color: #f1faee;
+    border-radius: 50%;
+    width: 1.5rem;
+    height: 1.5rem;
+    padding: 0.3rem;
+  }
+  .iconLight {
+    background-color: #131316;
+    color: #f1faee;
+    border-radius: 50%;
+    width: 1.5rem;
+    height: 1.5rem;
+    padding: 0.3rem;
+  }
+  .navLinks {
+    font-size: 0.7rem;
+  }
+
+  .navLinks > span {
+    display: block;
+  }
+  .scrollWindow {
+    position: fixed;
+    right: -2vh;
+    top: 0;
+    cursor: pointer;
+    z-index: 99;
+  }
+  .scrollWindow ul {
+    flex-direction: row;
+    background-color: mediumspringgreen;
+    border-bottom-left-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+    padding: 0.7rem;
+    z-index: 99;
+  }
+}
