--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@
   /* --primary-color: #222; */
   --secondary-color: #f1faee;
   --highlight: #00dfa2;
+  --accent: #edd719;
 }
 
 .dark {
@@ -42,14 +43,14 @@
   height: 1.8rem;
   padding: 0.4rem;
 }
-.aboutDark {
+/* .aboutDark {
   background-color: yellow;
   color: var(--secondary-color);
 }
 .aboutLight {
   color: var(--primary-color);
   background-color: var(--secondary-color);
-}
+} */
 .navlink-active .iconDark,
 .navlink-active .iconLight {
   background-color: var(--highlight);
@@ -163,7 +164,7 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  animation: loadingAnimation 2s linear infinite;
+  animation: loadingAnimation 2s linear;
 }
 @keyframes loadingAnimation {
   from {
@@ -227,6 +228,6 @@
 
   .error-message {
     padding: 0.5rem;
-    font-size: small;
+    font-size: medium;
   }
 }
