--- a/src/index.css
+++ b/src/index.css
@@ -177,15 +177,51 @@
 
 .inView {
   animation-timeline: view();
-  animation-range: entry;
   animation: inview linear;
 }
 @keyframes inview {
   from {
-    scale: 0;
+    scale: 0.7;
+    transform: translateX(0);
   }
   to {
-    scale: 1.7;
+    scale: 1.2;
+    opacity: 1;
+    transform: translateX(200px);
+  }
+}
+.image-fade {
+  animation: fade-in linear;
+  animation-range: exit -400px;
+  animation-timeline: view();
+}
+@keyframes fade-in {
+  from {
+    scale: 0.9;
+    transform: translateY(0);
+  }
+  to {
+    scale: 1;
+    opacity: 0.4;
+    transform: translateY(-250px);
+    filter: grayscale();
+  }
+}
+.text-fade {
+  animation: text-in linear;
+  animation-range: exit -200px;
+  animation-timeline: view();
+}
+@keyframes text-in {
+  from {
+    scale: 0.9;
+    transform: translateY(0);
+  }
+  to {
+    scale: 1;
+    opacity: 0.9;
+    transform: translateY(150px);
+    filter: grayscale();
   }
 }
 @media (max-width: 767px) {
