--- a/src/index.css
+++ b/src/index.css
@@ -175,7 +175,7 @@
   }
 }
 
-.inView {
+/* .inView {
   animation-timeline: view();
   animation: inview linear;
 }
@@ -185,15 +185,15 @@
     transform: translateX(0);
   }
   to {
-    scale: 1.2;
+    scale: 1.1;
     opacity: 1;
-    transform: translateX(200px);
+    transform: translateX(100px);
   }
-}
-.image-fade {
-  animation: fade-in linear;
-  animation-range: exit -400px;
-  animation-timeline: view();
+} */
+/* .image-fade {
+  animation: fade-in linear; */
+/* animation-range: exit -400px; */
+/* animation-timeline: view();
 }
 @keyframes fade-in {
   from {
@@ -202,29 +202,29 @@
   }
   to {
     scale: 1;
-    opacity: 0.4;
-    transform: translateY(-150px);
-    filter: grayscale();
+    opacity: 0.4; */
+/* transform: translateY(-10px); */
+/* filter: grayscale(100%);
   }
-}
+} */
 
-.text-fade {
-  animation: text-in linear;
-  animation-range: exit -100px;
-  animation-timeline: view();
-}
-@keyframes text-in {
+/* .text-fade {
+  animation: text-in linear; */
+/* animation-range: exit -100px; */
+/* animation-timeline: view();
+} */
+/* @keyframes text-in {
   from {
     scale: 0.9;
     transform: translateY(0);
   }
   to {
     scale: 1;
-    opacity: 0.9;
-    transform: translateY(150px);
-    filter: grayscale();
+    opacity: 0.9; */
+/* transform: translateY(50px); */
+/* filter: grayscale();
   }
-}
+} */
 .barIcon {
   display: none;
 }
@@ -247,13 +247,13 @@
   }
   .mobileNavBar {
     display: flex;
-    animation: movedown 1s linear;
+    animation: movedown 0.2s linear;
     /* flex-direction: column; */
     /* background-color: lightslategray; */
   }
   @keyframes movedown {
     from {
-      transform: translateX(15rem);
+      transform: translateX(5rem);
     }
     to {
       transform: translateX(0);
@@ -261,9 +261,10 @@
   }
   .scrollWindow {
     display: flex;
+    /* padding-right: 2.2rem; */
   }
   .mobileNavBar .navlink {
-    padding-right: 2.3rem;
+    padding-right: 2.15rem;
     display: flex;
   }
   .navlink {
